Changelog
=========

0.9 - (Unreleased)
------------------

 * Separated galleryview/tooltip integration into more descriptive files enabled for CMS [thuliper, #3007]
 * Generalized the tooltip system [thuliper, #3003]

0.8 - (2010-02-15)
------------------

 * New search box image [thuliper #2952]
 * Customized jquery.ui panel style to use our blue color on links. [thuliper]
 * Fixed event pop up to not rely on acquisition to reach the events Rich Topic [thuliper]
 * Fixed name CSS class name clash with Kupu [thuliper]

0.7 - (2010-01-18)
------------------
 * Portal message for version info now uses two different class styles, one for warning and one for just information. [demarant, #2389]
 * Download figure if no thumb on atct_album_view. [ghicaale #2897]
 * Slide panels for cross-side-top menu. [vincisas, thuliper #2771, #2881]

0.6 - (2010-01-04)
------------------
 * Map tooltip not shown where there is already an events map on the page. [ghicaale #2771]

0.5 - (2009-12-04)
------------------

 * Hardcoded list of promotions to show how it looks with correct images. #2824 [thuliper]
 * Use new green tooltips from eea.jquery. #2840 [thuliper]
 * New smaller image layout of frontpage promotions. #2840 [thuliper]

0.4 - (2009-12-01)
------------------

 * Added tooltips for multimedia area #2769 [thuliper]
 * Added jQuery Tools tooltips to frontpage promotions. #2824 [thuliper]
 * Fit current navigation in lowest supported resolution [vincisas]

0.3 - (2009-11-18)
------------------

 * Made /data-and-maps/figures and /data-and-maps/data show in fullscreen. [thuliper]
 * Removed tagline and frontpage-searchbox. [demarant]
 * Display info/warning dialog before printing #2791. [thuliper]
 * Removed frontpage multimedia from print.css - it didn't layout correctly in IE. [thuliper]
 * Fixed searchbox not removing default text when focused. [thuliper]
 * Fixed campaign mode/regular promotions logic so that it does not crash when there's only one promotion. [thuliper]