@@ -4,6 +4,7 @@ Changelog
 0.9 - (Unreleased)
 ------------------
 
+ * Autoscroll browser down to element classed 'autoscroll-to-here' #3011
  * Separated galleryview/tooltip integration into more descriptive files enabled for CMS [thuliper, #3007]
  * Generalized the tooltip system [thuliper, #3003]
 
